[gd_scene load_steps=54 format=2]

[ext_resource path="res://Tilemaps/tileset.png" type="Texture" id=1]
[ext_resource path="res://Art/robot.png" type="Texture" id=2]
[ext_resource path="res://Scripts/player.gd" type="Script" id=3]
[ext_resource path="res://Objects/Cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://FoundationOne.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/powerstation.png" type="Texture" id=7]
[ext_resource path="res://Scripts/swappable.gd" type="Script" id=8]
[ext_resource path="res://Scripts/goal.gd" type="Script" id=9]
[ext_resource path="res://Art/powercube.png" type="Texture" id=10]
[ext_resource path="res://Art/pg_counter.png" type="Texture" id=11]
[ext_resource path="res://Scripts/counter.gd" type="Script" id=12]
[ext_resource path="res://Bg/bg_0.png" type="Texture" id=13]
[ext_resource path="res://Bg/bg_9.png" type="Texture" id=14]
[ext_resource path="res://Bg/bg_4.png" type="Texture" id=15]
[ext_resource path="res://Bg/bg_11.png" type="Texture" id=16]
[ext_resource path="res://Bg/bg_12.png" type="Texture" id=17]
[ext_resource path="res://Bg/bg_1.png" type="Texture" id=18]
[ext_resource path="res://Bg/bg_5.png" type="Texture" id=19]
[ext_resource path="res://Bg/bg_7.png" type="Texture" id=20]
[ext_resource path="res://Bg/bg_3.png" type="Texture" id=21]
[ext_resource path="res://Bg/bg_6.png" type="Texture" id=22]
[ext_resource path="res://Bg/bg_13.png" type="Texture" id=23]
[ext_resource path="res://Bg/bg_2.png" type="Texture" id=24]
[ext_resource path="res://Bg/bg_10.png" type="Texture" id=25]
[ext_resource path="res://Bg/bg_14.png" type="Texture" id=26]
[ext_resource path="res://Bg/bg_15.png" type="Texture" id=27]
[ext_resource path="res://Bg/bg_8.png" type="Texture" id=28]
[ext_resource path="res://Art/meter.png" type="Texture" id=30]
[ext_resource path="res://Music/sfx_jump.wav" type="AudioStream" id=31]
[ext_resource path="res://Music/sfx_correct.wav" type="AudioStream" id=34]
[ext_resource path="res://Music/sfx_win.wav" type="AudioStream" id=35]
[ext_resource path="res://Music/sfx_wrong.wav" type="AudioStream" id=36]
[ext_resource path="res://Music/sfx_dead.wav" type="AudioStream" id=37]
[ext_resource path="res://Art/laser.png" type="Texture" id=39]
[ext_resource path="res://Scripts/laser.gd" type="Script" id=40]
[ext_resource path="res://Music/sfx_heal.wav" type="AudioStream" id=41]
[ext_resource path="res://Art/battery.png" type="Texture" id=42]
[ext_resource path="res://Scripts/battery.gd" type="Script" id=43]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 16
frame_0/texture = ExtResource( 13 )
frame_1/texture = ExtResource( 18 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 24 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 21 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 15 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 19 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 22 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 20 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 28 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 14 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 25 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 16 )
frame_11/delay_sec = 0.0
frame_12/texture = ExtResource( 17 )
frame_12/delay_sec = 0.0
frame_13/texture = ExtResource( 23 )
frame_13/delay_sec = 0.0
frame_14/texture = ExtResource( 26 )
frame_14/delay_sec = 0.0
frame_15/texture = ExtResource( 27 )
frame_15/delay_sec = 0.0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=10]
0/name = "tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tileset.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 64, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tileset.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 64, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tileset.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 5 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tileset.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 64, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 6 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tileset.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 128, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 7 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "tileset.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 64, 128, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 8 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "tileset.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 128, 64, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 9 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "tileset.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 128, 128, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "tileset.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 192, 0, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "tileset.png 10"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 256, 0, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "tileset.png 11"
11/texture = ExtResource( 1 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 320, 0, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "tileset.png 12"
12/texture = ExtResource( 1 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 192, 64, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "tileset.png 13"
13/texture = ExtResource( 1 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 256, 64, 64, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "tileset.png 14"
14/texture = ExtResource( 1 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 320, 64, 64, 64 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "tileset.png 15"
15/texture = ExtResource( 1 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 192, 128, 64, 64 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "tileset.png 16"
16/texture = ExtResource( 1 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 256, 128, 64, 64 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "tileset.png 17"
17/texture = ExtResource( 1 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 320, 128, 64, 64 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0

[sub_resource type="CircleShape2D" id=11]
radius = 12.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 12, 64 )

[sub_resource type="CircleShape2D" id=13]
radius = 25.0

[sub_resource type="CapsuleShape2D" id=14]
radius = 12.0
height = 30.0

[sub_resource type="DynamicFont" id=15]
size = 21
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]

[node name="Bg" type="TextureRect" parent="."]
margin_top = -1400.0
margin_right = 900.0
texture = SubResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgShader" type="ColorRect" parent="Bg"]
margin_right = 900.0
margin_bottom = 1400.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 10 )
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( -1441792, -2147483640, 0, -1441791, 3, 0, -1441790, 4, 0, -1441789, 4, 0, -1441788, 4, 0, -1441787, 4, 0, -1441786, 4, 0, -1441785, 4, 0, -1441784, 4, 0, -1441783, 4, 0, -1441782, 4, 0, -1441781, 4, 0, -1441780, -1610612733, 0, -1441779, -1610612728, 0, -1376256, 3, 0, -1376255, 1610612737, 0, -1376244, -1073741823, 0, -1376243, -1610612733, 0, -1310720, -1073741820, 0, -1310707, -1610612732, 0, -1245184, -1073741820, 0, -1245183, 1610612742, 0, -1245182, 1610612742, 0, -1245181, 1610612741, 0, -1245174, 5, 0, -1245173, 1610612742, 0, -1245172, 1610612742, 0, -1245171, -1610612732, 0, -1179648, -1073741820, 0, -1179635, -1610612732, 0, -1114112, -1073741820, 0, -1114107, 5, 0, -1114106, 1610612742, 0, -1114105, 1610612742, 0, -1114104, -1610612729, 0, -1114099, -1610612732, 0, -1048576, -1073741820, 0, -1048568, -1610612730, 0, -1048563, -1610612732, 0, -983040, -1073741820, 0, -983039, -1610612729, 0, -983032, -1610612730, 0, -983029, 5, 0, -983028, 6, 0, -983027, -1610612732, 0, -917504, -1073741820, 0, -917503, -1073741818, 0, -917496, 1610612736, 0, -917495, -1610612729, 0, -917491, -1610612732, 0, -851968, -1073741820, 0, -851967, 1610612743, 0, -851960, -1610612730, 0, -851959, -1610612730, 0, -851955, -1610612732, 0, -786432, -1073741820, 0, -786429, 1, 0, -786428, 1610612740, 0, -786427, 1610612740, 0, -786426, 1610612740, 0, -786425, 1610612740, 0, -786424, 1610612740, 0, -786423, 1610612740, 0, -786422, 1610612740, 0, -786421, 1610612740, 0, -786420, 1610612740, 0, -786419, -1610612732, 0, -720896, -1073741820, 0, -720893, -1073741823, 0, -720892, 4, 0, -720891, 4, 0, -720890, 0, 0, -720889, 4, 0, -720888, 4, 0, -720887, 4, 0, -720886, 4, 0, -720885, 4, 0, -720884, 4, 0, -720883, -1610612732, 0, -655360, -1073741820, 0, -655359, 1610612741, 0, -655347, -1610612732, 0, -589824, -1073741820, 0, -589811, -1610612732, 0, -524288, -1073741820, 0, -524286, 5, 0, -524285, 6, 0, -524284, 1610612742, 0, -524283, 1610612742, 0, -524282, 0, 0, -524281, 1610612742, 0, -524280, 1610612741, 0, -524275, -1610612732, 0, -458752, -1073741820, 0, -458739, -1073741822, 0, -393216, -1073741820, 0, -393205, 5, 0, -393204, 1610612742, 0, -393203, -1610612732, 0, -327680, -1073741820, 0, -327667, -1610612732, 0, -262144, -1073741820, 0, -262135, 5, 0, -262134, 1610612741, 0, -262131, -1610612732, 0, -196608, -1073741820, 0, -196602, 5, 0, -196601, 1610612741, 0, -196595, -1610612732, 0, -131072, -1073741820, 0, -131059, -1610612732, 0, -65536, -1073741821, 0, -65535, 1610612740, 0, -65534, 1610612740, 0, -65533, 1610612740, 0, -65532, 1610612740, 0, -65531, 1610612740, 0, -65530, 1610612740, 0, -65529, 1610612740, 0, -65528, 1610612740, 0, -65527, 1610612740, 0, -65526, 1610612740, 0, -65525, 1610612740, 0, -65524, 1610612740, 0, -65523, 1610612739, 0 )

[node name="Boxes" type="Node2D" parent="."]

[node name="Goal" type="Area2D" parent="Boxes"]
position = Vector2( 640, -288 )
input_pickable = false
monitorable = false
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Boxes/Goal"]
texture = ExtResource( 7 )
hframes = 4
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boxes/Goal"]
shape = SubResource( 11 )

[node name="sfx_active" type="AudioStreamPlayer2D" parent="Boxes/Goal"]
stream = ExtResource( 34 )

[node name="sfx_wrong" type="AudioStreamPlayer2D" parent="Boxes/Goal"]
stream = ExtResource( 36 )

[node name="NoGoZones" type="Node2D" parent="."]

[node name="Laser" type="Area2D" parent="NoGoZones"]
position = Vector2( 416, -576 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 40 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="NoGoZones/Laser"]
rotation = 1.5708
scale = Vector2( 2, 1 )
texture = ExtResource( 39 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoGoZones/Laser"]
shape = SubResource( 12 )

[node name="TestObject" type="RigidBody2D" parent="."]
position = Vector2( 800, -1248 )
mode = 2
mass = 10.0
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="TestObject"]
texture = ExtResource( 10 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestObject"]
shape = SubResource( 13 )

[node name="Battery" type="Sprite" parent="."]
position = Vector2( 96, -1248 )
texture = ExtResource( 42 )
hframes = 4
script = ExtResource( 43 )
__meta__ = {
"_edit_group_": true
}

[node name="sfx_heal" type="AudioStreamPlayer2D" parent="Battery"]
position = Vector2( -960, 736 )
stream = ExtResource( 41 )
max_distance = 8000.0

[node name="Player" type="RigidBody2D" parent="."]
position = Vector2( 96, -96 )
mode = 2
mass = 10.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 2 )
hframes = 5
vframes = 6
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 14 )

[node name="RayCast_1" type="RayCast2D" parent="Player"]
position = Vector2( -10, 20 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RayCast_2" type="RayCast2D" parent="Player"]
position = Vector2( 10, 20 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_bottom = 0
smoothing_enabled = true

[node name="sfx_jump" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 31 )
volume_db = -10.0

[node name="sfx_dead" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 37 )

[node name="sfx_win" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 35 )

[node name="CameraBound" type="Node2D" parent="."]
position = Vector2( 896, -1408 )

[node name="Cursor" parent="." instance=ExtResource( 4 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Sprite" parent="CanvasLayer"]
texture = ExtResource( 11 )
centered = false
hframes = 3
vframes = 4
script = ExtResource( 12 )

[node name="MeterBarBack" type="ColorRect" parent="CanvasLayer"]
margin_left = 730.0
margin_top = 4.0
margin_right = 858.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeterBar" type="ColorRect" parent="CanvasLayer"]
margin_left = 730.0
margin_top = 4.0
margin_right = 858.0
margin_bottom = 30.0
color = Color( 0, 0.784314, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Meter" type="Sprite" parent="CanvasLayer"]
position = Vector2( 725, 0 )
texture = ExtResource( 30 )
centered = false

[node name="Transition" type="ColorRect" parent="CanvasLayer"]
margin_right = 1000.0
margin_bottom = 1000.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = -40.0
margin_right = 900.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 15 )
text = "Teleporting costs a lot of energy. watch the power meter!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Boxes/Goal" to="Boxes/Goal" method="_on_body_entered"]
[connection signal="body_exited" from="Boxes/Goal" to="Boxes/Goal" method="_on_body_exited"]
[connection signal="body_entered" from="NoGoZones/Laser" to="NoGoZones/Laser" method="_on_body_entered"]
